k8s/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: python-webapp-service
spec:
  selector:
    app: python-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
