k8s/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: python-webapp-route
spec:
  to:
    kind: Service
    name: python-webapp-service
  port:
    targetPort: 8080
  tls:
    termination: edge
